--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,3 +11,19 @@ jobs:
               run: npm install
             - name: Run Tests
               run: npm test
+            - name: Build Docker Image
+              run: docker build -t stepsei1/step-app .
+            - name: Push Docker Image
+              run: |
+                echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+                docker push stepsei1/step-app
+    deploy:
+        needs: build
+        runs-on: [aws-ec2]
+        steps:
+            - name: Pull image from docker hub
+              run: docker pull stepsei1/step-app:latest
+            - name: Delete old container
+              run: docker rm -f nodejs-app-container
+            - name: Run docker container
+              run: docker run -d -p 5000:5000 --name nodejs-app-container stepsei1/step-app
