--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,18 +5,14 @@ jobs:
     build:
         runs-on: ubuntu-latest
         steps:
-            - name: Checkout Code
-              uses: actions/checkout@v2
-            - name: Install Dependencies
-              run: npm install
-            - name: Run Tests
-              run: npm test
-            - name: Build Docker Image
-              run: docker build -t stepsei1/step-app .
-            - name: Push Docker Image
-              run: |
-                echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-                docker push stepsei1/step-app
+            - name: Checkout source
+              uses: actions/checkout@v3
+            - name: Login to docker hub
+              run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }} 
+            - name: Build docker image
+              run: docker build -t integrationninjas/nodejs-app .
+            - name: Publish image to docker hub
+              run: docker push integrationninjas/nodejs-app:latest
     deploy:
         needs: build
         runs-on: [aws-ec2]
