--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,9 +10,9 @@ jobs:
             - name: Login to docker hub
               run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }} 
             - name: Build docker image
-              run: docker build -t integrationninjas/nodejs-app .
+              run: docker build -t stepsei1/step-app .
             - name: Publish image to docker hub
-              run: docker push integrationninjas/nodejs-app:latest
+              run: docker push stepsei1/step-app:latest
     deploy:
         needs: build
         runs-on: [aws-ec2]
